[gd_scene load_steps=5 format=3 uid="uid://b6yd062mjgn7o"]

[ext_resource type="Script" uid="uid://d3rbji1hlrubp" path="res://ui/finish_screen.gd" id="1_tdm8u"]
[ext_resource type="AudioStream" uid="uid://4yprkd2lfrne" path="res://assets/music/Loopable/Ending.wav" id="2_k7qu5"]
[ext_resource type="Texture2D" uid="uid://bugdimtmo36cb" path="res://ui/finish_game_ui/spr_end_game.png" id="3_r1ama"]
[ext_resource type="PackedScene" uid="uid://cqctqm0k1qlsr" path="res://ui/game_paused_ui/game_paused_ui.tscn" id="4_4sg73"]

[node name="FinishScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tdm8u")

[node name="EndingMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_k7qu5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_r1ama")
expand_mode = 1
stretch_mode = 6

[node name="MainMenuButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -56.0
offset_right = 124.0
offset_bottom = -16.0
grow_vertical = 0
text = "Main Menu"

[node name="GamePausedUI" parent="." instance=ExtResource("4_4sg73")]
unique_name_in_owner = true
visible = false

[connection signal="finished" from="EndingMusicPlayer" to="." method="_on_ending_music_player_finished"]
[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
